--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 CherryPy==3.2.4
 Jinja2==2.7.1
 MarkupSafe==0.18
+beanstalkc==0.3.0
+feedparser==5.1.3
+httplib2==0.8
+oauth2==1.5.211
+pymongo==2.6.2
 requests==2.0.0
 wsgiref==0.1.2
 xmltodict==0.7.0
+yql==0.7.7
